# xlog

./: CMakeLists.txt  README.md  config.h.in
include/xlog/: log_level.h  xlog.h
include/xlog/wrapper/: wrapper.h
pkg/: xlog-config-version.cmake.in  xlog-config.cmake.in
src/: xlog.cxx
src/wrapper/: CMakeLists.txt  wrapper.cxx
